<resources>
    <string name="app_name">Movies</string>
    <string name="detail_activity_name">Movie details</string>

    <string name="txt_no_connection">No internet. Check your connection.</string>

    <string name="order_by_popular">Order by popularity</string>
    <string name="order_by_highest_rated">Order by highest rate</string>

    <string name="popular">popular</string>
    <string name="top_rated">top_rated</string>
    <string name="videos">videos</string>
    <string name="reviews">reviews</string>

    <string name="release_date">Release Date</string>
    <string name="vote_rate">Rate</string>
    <string name="synopsis">Synopsis</string>

    <string name="image_description">Movie Post</string>
    <string name="image_description_main">Thumbnail</string>

    <!--Main Activity-->
    <string name="favorites_tag">favorites</string>
    <string name="popular_tag">popular</string>
    <string name="toprated_tag">top_rated</string>
    <string name="favorite_null">No favorited movies</string>

    <!--Info acitivity-->
    <string name="key_intent">movie_data</string>
    <string name="divide_trailer">Divider for trailers</string>
    <string name="divide_review">Divider for reviews</string>
    <string name="movie_favorite_enabled_info">Movie Inserted in favorites</string>
    <string name="movie_favorite_disabled_info">Movie removed from favorites</string>
    <string name="no_connection">No connection with internet</string>

    <!--preferences-->
    <string name="settings_fragment">Settings</string>
    <string name="settings_title">Settings</string>
    <!--preference key and title-->
    <string name="pref_options_key">options</string>
    <string name="pref_options_title">Filter Movies</string>
    <!--Preference Names-->
    <string name="pref_options_popular">Popular</string>
    <string name="pref_options_top_rated">Top rated</string>
    <string name="pref_options_favorites">Favorites</string>
    <!--Preference Values-->
    <string name="pref_options_popular_value" translatable="false">popular</string>
    <string name="pref_options_top_rated_value" translatable="false">top_rated</string>
    <string name="pref_options_favorites_value" translatable="false">favorites</string>

    <!--Video item Strings-->
    <string name="video_name">Name</string>
    <string name="video_type">Type</string>
    <string name="video_image_content">Image of player icon</string>
    <string name="trailers">Trailers</string>

    <!--Review item Strings-->
    <string name="review_author">Author</string>
    <string name="review_content">Content</string>
    <string name="reviews_title">Reviews</string>

    <!--Info Activity Strings -->
    <string name="favorites">Favorites</string>

</resources>
