<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp">

            <ImageView
                android:layout_width="185dp"
                android:layout_height="275dp"
                android:id="@+id/img_info_poster"
                android:scaleType="fitXY"
                android:contentDescription="@string/image_description"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:textSize="@dimen/text_info_size"
                android:textStyle="bold"
                android:text="@string/release_date"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_info_release"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:textStyle="italic"
                android:textSize="@dimen/text_info_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:textSize="@dimen/text_info_size"
                android:textStyle="bold"
                android:text="@string/vote_rate"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_info_rate"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:textStyle="italic"
                android:textSize="@dimen/text_info_size"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/text_info_size"
            android:text="@string/synopsis"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_info_overview"
            android:textSize="20sp"
            android:textStyle="italic"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</LinearLayout>